erDiagram
    user ||--o{ user_skill : has
    skill ||--o{ user_skill : used_by
    user ||--o{ project : posts

    user {
        INT id PK
        BIGINT telegram_id "NOT UNIQUE (multi-accounts allowed)"
        VARCHAR(100) name
        VARCHAR(100) email "UNIQUE"
        VARCHAR(255) password_hash
        ENUM role "('employer','freelancer')"
        DECIMAL(3,2) rating
        VARCHAR(255) profile_picture
        TEXT bio
        DECIMAL(10,2) hourly_rate
        VARCHAR(20) phone
        VARCHAR(255) linkedin
        VARCHAR(255) github
        VARCHAR(255) website
        TIMESTAMP created_at
        DATETIME last_login
    }

    skill {
        INT id PK
        VARCHAR(100) name "UNIQUE"
        VARCHAR(100) category
    }

    user_skill {
        INT user_id FK
        INT skill_id FK
        TINYINT proficiency
    }

    project {
        INT id PK
        INT employer_id FK
        VARCHAR(255) title
        TEXT description
        VARCHAR(100) category
        VARCHAR(100) role
        DECIMAL(12,2) budget
        INT delivery_days
        TIMESTAMP created_at
    }
